<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#FFEB3B"
    android:padding="20dp"
    android:layout_gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="6dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:foregroundGravity="center"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/vehicle_logo"
            android:layout_width="50dp"
            android:layout_marginEnd="10dp"
            android:layout_height="50dp"
            android:src="@drawable/cropped_audi_logo"
            android:contentDescription="@string/marka_logo" />

        <TextView
            android:id="@+id/vehicle_marka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="Audi"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/vehicle_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="A3 Sportback"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/vehicle_yil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="italic|bold"
            android:textColor="#000000"
            android:text="2019"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:foregroundGravity="center"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/location"
            android:contentDescription="@string/konum" />

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/vehicle_adres"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="viewStart"
            android:textStyle="italic|bold"
            android:textColor="#454141"
            android:text="Adres"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_marginEnd="5dp"
            android:layout_height="45dp"
            android:src="@drawable/gas_station"
            android:contentDescription="@string/yak_t_t_r" />

        <TextView
            android:id="@+id/vehicle_yakitTipi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dizel"
            android:textColor="#E91E63"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/fuel"
            android:contentDescription="@string/yak_t_durumu" />

        <TextView
            android:id="@+id/vehicle_yakitSeviyesi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dolu"
            android:textStyle="bold"
            android:textColor="#E91E63"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:id="@+id/vehicle_resim"
            android:src="@drawable/cropped_audi_logo"
            android:layout_height="300dp"
            android:contentDescription="@string/araba_resim">
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/vehicle_dakikaFiyat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#4CAF50"
            android:text="Saatlik: 15"
            android:textStyle="bold"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/vehicle_gunlukFiyat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#4CAF50"
            android:text="Günlük: 300"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <TextView
        android:id="@+id/btnKirala"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/bu_arac_kirala"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/black" />
</LinearLayout>
